Expand Splunk test coverage